create views folder and update tnv
