# src/controllers/nguoiDung.controller.js
@@ -1,6 +1,7 @@
 const NguoiDungModel = require('../models/nguoiDung.model');
 const HttpException = require('../utils/HttpException.utils');
 const { validationResult } = require('express-validator');
+const Quyen = require('../utils/nguoiDungQuyen.utils');
 const bcrypt = require('bcryptjs');
 const jwt = require('jsonwebtoken');
 const dotenv = require('dotenv');
@@ -25,14 +26,10 @@ class NguoiDungController {
     };
 
     getNguoiDungById = async (req, res, next) => {
-        console.log(req.params);
         const nguoiDung = await NguoiDungModel.findOne({ ma_nguoi_dung: req.params.ma_nguoi_dung });
-        console.log(nguoiDung);
         if (!nguoiDung) {
             throw new HttpException(404, 'NguoiDung not found');
         }
-        console.log(nguoiDung);
-        console.log("nguoiDung.mat_khau");
         const { mat_khau, ...nguoiDungWithoutPassword } = nguoiDung;
 
         res.send(nguoiDungWithoutPassword);
@@ -62,10 +59,8 @@ class NguoiDungController {
 
     createNguoiDung = async (req, res, next) => {
         this.checkValidation(req);
-
         await this.hashPassword(req);
         const {xac_nhan_mat_khau, ...restOfReqBody} = req.body;
-        console.log(restOfReqBody);
         const result = await NguoiDungModel.create(restOfReqBody);
 
         if (!result) {
